--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "shadcn": "^3.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.50.0",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
