--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^24.10.4",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vite-pwa/assets-generator": "^1.0.2",
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -44,5 +45,10 @@
     "typescript-eslint": "^8.50.0",
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
